--- a/sass/custom/public/partiels/_main.scss
+++ b/sass/custom/public/partiels/_main.scss
@@ -3,6 +3,139 @@ body {
 	font-family: 'Roboto', sans-serif;
 }
 
+section {
+	background: transparent;
+}
+
+
+
+* { box-sizing: border-box }
+
+body {
+   transition: background 1s ease;
+   background: #3498db;
+}
+
+p {
+  color: #ecf0f1;
+  font-size: 2em;
+  text-align: center;
+  
+}
+
+span {
+  clear: both;
+  font-size: .7em;
+  color: #bdc3c7;
+}
+
+a {
+  color: #c0392b;
+  text-decoration: none;
+}
+
+
+.slide {
+  
+  .inside {
+    display: table;
+    height: 100%;
+    width: 100%;
+    padding: 0 3em;
+    
+    p {
+      display: table-cell;
+      width: 100%;
+      clear: both;
+      vertical-align: middle; 
+      text-align: center; 
+    }
+  }
+}
+
+
+
+
+// Text Pop-UP
+
+@-webkit-keyframes text-pop-up-top {
+  0% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    -webkit-transform-origin: 50% 50%;
+            transform-origin: 50% 50%;
+    text-shadow: none;
+  }
+  100% {
+    -webkit-transform: translateY(-50px);
+            transform: translateY(-50px);
+    -webkit-transform-origin: 50% 50%;
+            transform-origin: 50% 50%;
+    text-shadow: 0 1px 0 #cccccc, 0 2px 0 #cccccc, 0 3px 0 #cccccc, 0 4px 0 #cccccc, 0 5px 0 #cccccc, 0 6px 0 #cccccc, 0 7px 0 #cccccc, 0 8px 0 #cccccc, 0 9px 0 #cccccc, 0 50px 30px rgba(0, 0, 0, 0.3);
+  }
+}
+@keyframes text-pop-up-top {
+  0% {
+    -webkit-transform: translateY(0);
+            transform: translateY(0);
+    -webkit-transform-origin: 50% 50%;
+            transform-origin: 50% 50%;
+    text-shadow: none;
+  }
+  100% {
+    -webkit-transform: translateY(-50px);
+            transform: translateY(-50px);
+    -webkit-transform-origin: 50% 50%;
+            transform-origin: 50% 50%;
+    text-shadow: 0 1px 0 #cccccc, 0 2px 0 #cccccc, 0 3px 0 #cccccc, 0 4px 0 #cccccc, 0 5px 0 #cccccc, 0 6px 0 #cccccc, 0 7px 0 #cccccc, 0 8px 0 #cccccc, 0 9px 0 #cccccc, 0 50px 30px rgba(0, 0, 0, 0.3);
+  }
+}
+
+.text-pop-up-top {
+	-webkit-animation: text-pop-up-top 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+	        animation: text-pop-up-top 1s cubic-bezier(0.550, 0.085, 0.680, 0.530) both;
+}
+
+
+// Text tracking effect 
+
+.tracking-in-contract-bck {
+	-webkit-animation: tracking-in-contract-bck 3s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+	        animation: tracking-in-contract-bck 3s cubic-bezier(0.215, 0.610, 0.355, 1.000) both;
+}
+
+@-webkit-keyframes tracking-in-contract-bck {
+  0% {
+    letter-spacing: 1.5em;
+    -webkit-transform: translateZ(400px);
+            transform: translateZ(400px);
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.6;
+  }
+  100% {
+    -webkit-transform: translateZ(0);
+            transform: translateZ(0);
+    opacity: 1;
+  }
+}
+@keyframes tracking-in-contract-bck {
+  0% {
+    letter-spacing: 1.5em;
+    -webkit-transform: translateZ(400px);
+            transform: translateZ(400px);
+    opacity: 0;
+  }
+  40% {
+    opacity: 0.6;
+  }
+  100% {
+    -webkit-transform: translateZ(0);
+            transform: translateZ(0);
+    opacity: 1;
+  }
+}
 
 /* CLASSES */
 
@@ -91,6 +224,7 @@ svg{
 	height: 100vh;
 	position: relative;
 	top: 0;
+	background-color: transparent;
 }
 
 
@@ -107,7 +241,7 @@ svg{
 
 	width: 100%;
 	position: absolute;
-	top: 50%;
+	top: 35%;
 	z-index: 20;
 	font-family: 'Roboto', sans-serif;
 	color: white;
@@ -116,7 +250,7 @@ svg{
 }
 
 .home_hero .hero_title {
-	font-size: 60px;
+	font-size: 100px;
 	letter-spacing: 10px;
 	padding: 15px 5px 15px;
 }
@@ -127,13 +261,21 @@ svg{
 	padding: 15px 5px 15px;
 }
 
+
+.hero_down_btn {
+	position: absolute;
+	bottom: 50px;
+	width: 10%;
+	height: 10%;
+}
+
 /* MAIN HOME PAGE */
 
 .main_container {
 	position: relative;
 	z-index: 90;
 	padding-top: 4%;
-	background-color: $colorWhite;
+	background-color: transparent;
 }
 
 
