--- a/sass/custom/partiels/_main.scss
+++ b/sass/custom/partiels/_main.scss
@@ -13,7 +13,7 @@ section {
 
 body {
    transition: background 1s ease;
-   background: #3498db;
+
 }
 
 p {
@@ -74,69 +74,6 @@ a {
 }
 
 
-
-/* HEADER */
-
-.header {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-evenly;
-}
-
-/* LOGO */
-
-.header_logo {
-	margin-left: 50px;
-	width: 10%;
-}
-
-.header_logo img {
-	width: 45%;
-	padding:  10px 10px 10px;
-}
-
-
-
-/* ACCOUNT BUTTON */
-
-.account_button	{
-	width: 10%;
-	margin-top: 40px;
-	text-align: center;
-}
-
-
-#section1{
-  background-size:cover;
-  height:200px;
-}
-svg{
-  position:absolute;
-  bottom:-10px; 
-  left:0;
-  width:100%; 
-  height:150px;
-  display:block;
-}
-
-
-
-/* NAVIGATION */
-
-.nav_container {
-	width: 40%;
-	height: 30px;
-	margin-top: 40px;
-}
-
-.nav_container ul {
-	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
-}
-
-
-
 /* HOME HERO */
 
 .home_hero {
@@ -181,18 +118,6 @@ svg{
 	padding: 15px 5px 15px;
 }
 
-
-.svg-logo-home {
-  width: 100%;
-  height: 350px;
-  text-align: center;
-
-}
-
-.svg-logo-polygon {
-
-}
-
 .hero_down_btn {
 	position: absolute;
 	bottom: 50px;
@@ -205,15 +130,20 @@ svg{
 	color: #000;
 }
 
-
-.demo-content {
+.home_svg_content {
 	position: relative;
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
 	width: 100%;
-	height: 350px;
+	height: 100%;
 	text-align: center;
+}
+
+.home_svg_content svg {
+	position: absolute;
+	bottom: 20%;
+	left: 46%;
 }
 
 
