--- a/sass/custom/global.scss
+++ b/sass/custom/global.scss
@@ -3,5 +3,6 @@
 @import "partiels/_mixins.scss";
 @import "partiels/_layout.scss";
 @import "partiels/_animations.scss";
-@import "partiels/site/_header.scss";
+@import "partiels/_object.scss";
 @import "partiels/_main.scss";
+@import "partiels/site/_header.scss";
