--- a/sass/custom/partiels/_main.scss
+++ b/sass/custom/partiels/_main.scss
@@ -13,7 +13,6 @@ section {
 
 body {
    transition: background 1s ease;
-
 }
 
 p {
@@ -23,15 +22,17 @@ p {
   
 }
 
-span {
-  clear: both;
-  font-size: .7em;
-  color: #bdc3c7;
-}
 
 a {
   color: #c0392b;
   text-decoration: none;
+}
+
+
+.pos-fix {
+	position: fixed;
+	top: 0;
+	left: 0;
 }
 
 
@@ -53,26 +54,51 @@ a {
 }
 
 
-
-
-/* CLASSES */
-
-.separator {
-	border-bottom: 1px solid white;
-
-	width: 10%;
+/**************************
+******** Loader ********
+**************************/
+#loader {
+	position: fixed;
+	/* change if the mask should have another color then white */
+	z-index: 100;
+	top: 0;
+	right: 0;
+	bottom: 0;
+	left: 0;
+	background-color: #fff;
+	/* makes sure it stays on top */
 }
 
-.home_section_head {
+
+
+/* INTRO */
+
+.intro {
+  padding: 10px 0px 10px 0px;
+  width: 100%;
+  height: 100vh;
+  background-color: black;
+}
+
+.intro_head {
 	text-align: center;
 	width: 100%;
-	margin-bottom: 5%;
+	color: white;
 }
 
-.home_section_head h2 {
-	font-size: 40px;
+.intro_head h2 {
+	font-size:  40px;
 }
 
+.intro_container {
+  width: 100%;
+  height: auto;
+
+}
+
+.intro_text {
+  color: black;
+}
 
 /* HOME HERO */
 
@@ -85,17 +111,7 @@ a {
 }
 
 
-.header_img {	
-    background-color: rgba(0, 0, 0, 0);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-image: url('../../../assets/images/background_keyboard.jpg');
-    width: 100%;
-    height: 100%;
-}
-
 .home_hero_text {
-
 	width: 100%;
 	position: absolute;
 	top: 35%;
@@ -110,12 +126,14 @@ a {
 	font-size: 100px;
 	letter-spacing: 10px;
 	padding: 15px 5px 15px;
+	color: $colorBlack;
 }
 
 .home_hero .hero_description {
 	font-size: 25px;
 	letter-spacing: 10px;
 	padding: 15px 5px 15px;
+	color: $colorBlack;
 }
 
 .hero_down_btn {
@@ -142,8 +160,8 @@ a {
 
 .home_svg_content svg {
 	position: absolute;
-	bottom: 20%;
-	left: 46%;
+	bottom: 35%;
+	left: 35%;
 }
 
 
@@ -191,32 +209,7 @@ a {
 
 /* CREATION */
 
-.intro {
-	padding: 100px 0px 100px 0px;
-  width: 100%;
-  height: 100%;
-  margin-top: 10%;
-  background-color: white;
-}
 
-.intro_head {
-	text-align: center;
-	width: 100%;
-	margin-bottom: 100px;
-}
-
-.intro_head h2 {
-	font-size:  40px;
-}
-
-.intro_container {
-  width: 100%;
-  height: auto;
-}
-
-.intro_text {
-  color: black;
-}
 
 
 /* SERVICES */
