--- a/sass/custom/partiels/site/_header.scss
+++ b/sass/custom/partiels/site/_header.scss
@@ -3,46 +3,136 @@
 .header {
 	display: flex;
 	flex-direction: row;
-	justify-content: space-evenly;
+	justify-content: space-between;
+	width: 100%;
+	padding: 10px 20px;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 90;
+	background: $colorWhite;
 }
+
+
+
+
+:root {
+	--burger-lines-c: 4;
+	--burger-margins-c: calc(var(--burger-lines-c) - 1);
+	--burger-width: 50px;
+	--burger-height: 50px;
+	--burger-lines-h: 4px;
+	--burger-line-mb: 5px;
+	--burger-line-br: 6px;
+	--burger-h: calc((var(--burger-lines-h) * var(--burger-lines-c)) + (var(--burger-line-mb) * var(--burger-margins-c)) - var(--burger-lines-h));
+	--burger-animation-top: calc(var(--burger-h) / 2);
+}
+
+.nav_toggle {
+	position: relative;
+	width: var(--burger-width);
+	height: var(--burger-height);
+	margin-top: 30px;
+    cursor: pointer;
+	display: block;
+	z-index: 99;
+}
+
+.nav_toggle.open span:nth-child(2),
+.nav_toggle.open span:nth-child(3) {
+	width: 0;
+	opacity: 0;
+}
+
+.nav_toggle.open span:nth-child(4) {
+	transform: rotate(45deg);
+	top: calc(var(--burger-animation-top) * (-1));
+	background: #FFF;
+}
+
+.nav_toggle.open span:nth-child(1) {
+	transform: rotate(-45deg);
+	top: var(--burger-animation-top);
+	background: #FFF;
+}
+
+.nav_toggle span {
+    background: #000;
+    display: block;
+    width: var(--burger-width);
+    height: var(--burger-lines-h);
+    margin-bottom: var(--burger-line-mb);
+    border-radius: var(--burger-line-br);
+    position: relative;
+    top: 0;
+    transition: all ease-out 0.4s;
+}
+
 
 /* LOGO */
 
-.header_logo {
-	margin-left: 50px;
-	width: 10%;
+.custom-logo {
+	padding: 10px;
 }
-
-.header_logo img {
-	width: 45%;
-	padding:  10px 10px 10px;
-}
-
 
 
 /* ACCOUNT BUTTON */
 
-.account_button	{
-	width: 10%;
+.client {
+	width: 100%;
 	margin-top: 40px;
 	text-align: center;
 }
 
+.client_button {
+	width: 25%;
+	height: 50px;
+	border-radius: 30px;
+	background: transparent;
+	color: $colorWhite;
+}
 
+.client_button a {
+	color: $colorWhite;
+}
 
 
 
 /* NAVIGATION */
 
 .nav_container {
-	width: 40%;
-	height: 30px;
-	margin-top: 40px;
+	width: 0%;
+	height: 0;
+	display: none;
 }
 
 .nav_container ul {
 	display: flex;
 	flex-direction: row;
 	justify-content: space-between;
+}
+
+.menu_open {
+	width: 100%;
+	height: 100vh;
+	background-color: #000;
+	position: fixed;
+	top: 0;
+	left: 0;
+	z-index: 90;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	padding: 20% 25%;
+}
+
+.page_item {
+	width: 100%;
+	text-align: center;
+}
+
+.page_item a {
+	color: white;
+	font-size: 50px;
 }
 
