created second section

--- a/sass/custom/partiels/_var.scss
+++ b/sass/custom/partiels/_var.scss
@@ -3,3 +3,9 @@ $colorWhite1: #f2f2f2;
 
 $colorBlack: #000;
 
+$colorGrey1: #1b1b1b;
+
+$fontTitle: 'Josefin Sans', sans-serif;
+$fontText: 'Economica', sans-serif;
+
+
