--- a/sass/custom/global.css
+++ b/sass/custom/global.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Economica|Josefin+Sans&display=swap");
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -244,6 +245,17 @@ table {
   animation: slide-in-top 0.5s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
 }
 
+.container {
+  max-width: 600px;
+  margin: 0 auto;
+  width: 100%;
+  text-align: center;
+}
+
+.list_items {
+  padding: 2%;
+}
+
 .pos-fixed {
   position: fixed;
   top: 0;
@@ -263,30 +275,18 @@ table {
 }
 
 body {
-  font-family: "Roboto", sans-serif;
-}
-
-section {
-  background: transparent;
-}
-
-* {
-  box-sizing: border-box;
-}
-
-body {
   transition: background 1s ease;
 }
 
-p {
-  color: #ecf0f1;
-  font-size: 2em;
-  text-align: center;
+h1, h2, h3, h4, a {
+  font-family: "Josefin Sans", sans-serif;
+  text-transform: uppercase;
+  font-weight: normal;
+  letter-spacing: 0.2em;
 }
 
-a {
-  color: #c0392b;
-  text-decoration: none;
+p {
+  font-family: "Josefin Sans", sans-serif;
 }
 
 .pos-fix {
@@ -325,29 +325,49 @@ a {
 
 /* INTRO */
 .intro {
-  padding: 10px 0px 10px 0px;
-  width: 100%;
-  height: 100vh;
-  background-color: black;
-}
-
-.intro_head {
-  text-align: center;
-  width: 100%;
-  color: white;
-}
-
-.intro_head h2 {
-  font-size: 40px;
-}
-
-.intro_container {
   width: 100%;
   height: auto;
 }
 
-.intro_text {
-  color: black;
+.intro_head {
+  background-color: #1b1b1b;
+  padding: 10% 0;
+}
+
+.intro_head_title {
+  color: #fff;
+  font-size: 40px;
+  text-align: center;
+  padding: 50px 0;
+}
+
+.intro_head_text {
+  color: #fff;
+  font-size: 25px;
+  text-align: center;
+  padding: 10px 0;
+}
+
+.intro_img {
+  width: 100%;
+  text-align: center;
+}
+
+.intro_img img {
+  width: 60%;
+  margin-top: -8%;
+  margin-left: 5%;
+}
+
+.intro_content_icons {
+  width: 100%;
+  height: auto;
+}
+
+.intro_content_icons ul {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 /* HOME HERO */
