--- a/sass/custom/partiels/_main.scss
+++ b/sass/custom/partiels/_main.scss
@@ -1,31 +1,19 @@
 
-body {
-	font-family: 'Roboto', sans-serif;
-}
-
-section {
-	background: transparent;
-}
-
-
-
-* { box-sizing: border-box }
+@import url('https://fonts.googleapis.com/css?family=Economica|Josefin+Sans&display=swap');
 
 body {
    transition: background 1s ease;
 }
 
-p {
-  color: #ecf0f1;
-  font-size: 2em;
-  text-align: center;
-  
+h1,h2,h3,h4,a {
+	font-family: 'Josefin Sans', sans-serif;
+	text-transform: uppercase;
+	font-weight: normal;
+	letter-spacing: 0.2em;
 }
 
-
-a {
-  color: #c0392b;
-  text-decoration: none;
+p {
+	font-family: $fontText;
 }
 
 
@@ -74,30 +62,50 @@ a {
 /* INTRO */
 
 .intro {
-  padding: 10px 0px 10px 0px;
-  width: 100%;
-  height: 100vh;
-  background-color: black;
-}
-
-.intro_head {
-	text-align: center;
-	width: 100%;
-	color: white;
-}
-
-.intro_head h2 {
-	font-size:  40px;
-}
-
-.intro_container {
   width: 100%;
   height: auto;
 
 }
 
-.intro_text {
-  color: black;
+.intro_head {
+    background-color: $colorGrey1;
+    padding: 10% 0;
+}
+
+.intro_head_title {
+	color: $colorWhite;
+	font-size: 40px;
+	text-align: center;
+	padding: 50px 0;
+}
+
+.intro_head_text {
+	color: $colorWhite;
+	font-size: 25px;
+	text-align: center;
+	padding: 10px 0;
+}
+
+.intro_img {
+	width: 100%;
+	text-align: center;
+}
+
+.intro_img img {
+	width: 60%;
+	margin-top: -8%;
+	margin-left: 5%;
+}
+
+.intro_content_icons {
+	width: 100%;
+	height: auto;
+}
+
+.intro_content_icons ul {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
 }
 
 /* HOME HERO */
