--- a/sass/custom/partiels/_object.scss
+++ b/sass/custom/partiels/_object.scss
@@ -1,7 +1,14 @@
 
+.container {
+	max-width: 600px;
+    margin: 0 auto;
+    width: 100%;
+    text-align: center;
+}
 
-
-
+.list_items {
+	padding: 2%;
+}
 
 .pos-fixed {
 	position: fixed;
