--- a/sass/custom/partiels/_main.scss
+++ b/sass/custom/partiels/_main.scss
@@ -108,6 +108,10 @@ p {
 	justify-content: center;
 }
 
+.intro_list {
+	font-size: 45px;
+}
+
 /* HOME HERO */
 
 .home_hero {
@@ -191,11 +195,13 @@ p {
 	width: 100%;
 	margin-bottom: 5%;
 	padding: 10px 100px 10px 100px;
+	display: flex;
+	flex-direction: row;
 }
 
 .projects_head {
 	text-align: center;
-	width: 100%;
+	width: 25%;
 	padding:  15px 5px 15px;
 }
 
