--- a/sass/custom/partiels/site/_header.scss
+++ b/sass/custom/partiels/site/_header.scss
@@ -13,9 +13,6 @@
 	background: $colorWhite;
 }
 
-
-
-
 :root {
 	--burger-lines-c: 4;
 	--burger-margins-c: calc(var(--burger-lines-c) - 1);
@@ -108,8 +105,7 @@
 
 .nav_container ul {
 	display: flex;
-	flex-direction: row;
-	justify-content: space-between;
+	flex-direction: column;
 }
 
 .menu_open {
