--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*
-Theme Name: Vector Wev
+Theme Name: Vector Web
 Author: Alexandre Celier
 Description: Theme site pro vector-web.fr
 Version: 0.0.1
