fragment the header and hero in files

--- a/sass/custom/global.scss
+++ b/sass/custom/global.scss
@@ -6,3 +6,4 @@
 @import "partiels/_object.scss";
 @import "partiels/_main.scss";
 @import "partiels/site/_header.scss";
+@import "partiels/site/_services.scss";
